--- a/index.html
+++ b/index.html
@@ -3,21 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Society Test</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Welcome to Hey!</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f2f5;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        header {
+            background-color: #ffffff;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 2rem;
+        }
+        h1 {
+            color: #1a73e8;
+            margin: 0;
+        }
+        .content {
+            background-color: #ffffff;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #1a73e8;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 1rem;
+        }
+        .button:hover {
+            background-color: #1557b0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to New Society</h1>
-    </header>
-    <main>
-        <section>
-            <h2>About Us</h2>
-            <p>We are a forward-thinking organization dedicated to positive change.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 New Society. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Welcome to Hey!</h1>
+        </header>
+        <div class="content">
+            <h2>Hello, World! 👋</h2>
+            <p>This is a simple website created to demonstrate basic HTML and CSS. Feel free to modify and enhance it!</p>
+            <p>Some features of this page:</p>
+            <ul>
+                <li>Clean and modern design</li>
+                <li>Responsive layout</li>
+                <li>Simple color scheme</li>
+                <li>Easy to customize</li>
+            </ul>
+            <a href="https://github.com/YairAzrieli/hey" class="button">View on GitHub</a>
+        </div>
+    </div>
 </body>
 </html>
